# docint

./: README.md
CV_project/: Dockerfile  PROJECT_SPEC.md  pyproject.toml  requirements.txt
CV_project/api/: main.py
CV_project/configs/: default.yaml
CV_project/data/benchmark/handwritten/: page2.gt.txt
CV_project/data/benchmark/low_light/: page1.gt.txt
CV_project/data/samples/: README.md
CV_project/demo/: app.py
CV_project/eval/: RESULTS.md  benchmark.py  make_gt.py
CV_project/scripts/: visualize_preprocess.py
CV_project/src/docint/: __init__.py  config.py  detect.py  layout.py  pipeline.py  preprocess.py  recognize.py  schemas.py  timing.py
CV_project/tests/: conftest.py  test_api.py  test_detect.py  test_eval.py  test_layout.py  test_pipeline.py  test_preprocess.py  test_recognize.py  test_schemas.py
